syntax = "proto3";

package log;

message MessageEntry {
  string key = 1;
  bytes value = 2;
  int64 timestamp = 3;
  uint64 offset = 4;
}
