syntax = "proto3";

package namespace;

service Namespace {
  rpc Create (CreateNamespaceRequest) returns (CreateNamespaceResponse) {}
  rpc Update (UpdateNamespaceRequest) returns (UpdateNamespaceResponse) {}
}

enum RetentionPolicy {
  Ttl = 0;
  DiskPressure = 1;
}

message CreateNamespaceRequest {
  string key = 1;
  RetentionPolicy retention_policy = 2;
}

message CreateNamespaceResponse {
  string key = 1;
}

message UpdateNamespaceRequest {
  string key = 1;
  RetentionPolicy retention_policy = 2;
}

message UpdateNamespaceResponse {
  string key = 1;
}
